css/style.css
:root {
  --violet: hsl(257, 40%, 49%);
  --magenta: hsl(300, 69%, 71%);
}

body {
  background-color: var(--violet);
  background-image: url(../images/bg-mobile.svg);
  background-repeat: no-repeat;
  background-position: top;

}

.site-wrapper {
  max-width: 1440px;
  padding: 0 2.1875rem 0 2.1875rem;
  margin: auto;
  
}

.sr-only {
  position: absolute;
  left: -10000px;
  width: 1px;
  height: 1px;
  top: auto;
  overflow: hidden;
}

.logo {
  padding-top: 2.3875rem;
  width: 7.5rem;
  margin-bottom: 4.3625rem;
}

.hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.image {
  margin-bottom: 3.74rem;
}

.info {
  color: white;
  text-align: center;
  /* max-width: 520px; */
  justify-self: center;
}

h2 {
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  font-size: 24px;
  line-height: 150%;
  padding-bottom: 1rem;
}

p {
font-family: 'Open Sans', sans-serif;
font-weight: 400;
font-size: 1rem;
line-height: 150%;
padding-bottom: 1.5rem;
}

.reg-btn {
  font-family: "poppins", sans-serif;
  font-size: 0.75rem;
  color: var(--violet);
  background-color: white;
  text-decoration: none;
  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.269022);
  border-radius: 20px;
  width: 200px;
  height: 40px;
  text-align:center;
  cursor: pointer;
  border: none;
}

.reg-btn:hover{
  cursor: pointer;
  color: white;
  background-color: var(--magenta);
}

.reg-btn:focus{
  background-color: var(--magenta);
}

.social-icons {
  
  margin-top: 3.75rem;
  display: flex;
  justify-content: center;
  gap: 1rem;
}

ion-icon {
  font-size: 20px;
  padding: 6px;
  letter-spacing: 3px;
  color: white;
  border: white 1px solid;
  border-radius: 50%;
}

ion-icon:hover {
  color: var(--magenta);
  border: var(--magenta) 1px solid;
}



/* media queries */
@media screen and (min-width: 23.5em) {
  body {
    background-image: url(../images/bg-desktop.svg);
  background-repeat: no-repeat;
  background-size: contain;
  /* background-position: top; */
  }
}

@media screen and (min-width: 49.25em) {
  .logo {
    padding-top: 4rem;
    width: 12.5rem;
    /* margin-left: 4.78125rem; */
    margin-bottom: 6.5rem;
  }

  .hero {
    flex-direction: row;
    gap: 3.75rem; 
  }

  .info {
    text-align: start;
    max-width: 520px;
    /* margin-left: 60px; */
  }

  h2 {
    font-size: 2.5rem;
  }

  p {
    font-size: 1.125rem;
  }

  .reg-btn {
    font-size: 0.75rem;
    
    box-shadow: 2px 4px 9px 3px rgba(0, 0, 0, 0.258633);
    border-radius: 28px;

    font-size: 1.125rem;

    width: 200px;
    height: 56px; 
  }

  .social-icons {
    justify-content: flex-end;
  }
}

@media screen and (min-width: 61.875em){
  .social-icons {
    margin-top: 1.6875rem;
  }
}

@media screen and (min-width: 84.6875em) {
  .logo {
    margin-left: 1.78125rem;

  }
}

